Paginado de os hechos de una coleccion